# APEX

./: .gitignore  README.md
backend/: .env.example  .vercelignore  README.md  alembic.ini  index.py  openapi.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  api.py  bootstrap.py  main.py  models.py  schemas.py  seed.py
backend/app/core/: config.py  database.py  security.py
backend/app/services/: __init__.py  auth.py  coach.py  nutrition.py  providers.py  training.py
backend/app/tests/: conftest.py  test_api.py  test_deployment.py  test_services.py
docs/: APEX_Project_Scope.md  daily-sync-log.md
docs/architecture/: APEX_AI_COACH_SPEC.md  APEX_API_Contract.md  apex-infra.jsx
docs/deployment/: VERCEL_DEPLOYMENT.md
docs/design/: README.md  apex-app-v9.jsx  apex-daily-log.jsx  apex-icon-library.jsx  apex-landing.jsx  index.html  package-lock.json  package.json
docs/design/src/: main.jsx  preview-app.jsx
docs/implementation/: APEX_MVP_IMPLEMENTATION.md  APEX_SUPABASE_PROTOTYPE_PLAN.md  APEX_SUPABASE_SETUP_GUIDE.md
frontend/: .env.example  .vercelignore  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: api.test.ts  styles.css
frontend/src/app/: App.tsx  routes.test.tsx  routes.tsx
frontend/src/components/: AppShell.test.tsx  AppShell.tsx  AppSplashScreen.tsx  Brand.tsx  CoachDock.tsx
frontend/src/lib/: api.ts  auth.tsx  format.ts  prototypeNutrition.test.ts  prototypeNutrition.ts  prototypeSupabaseRest.ts  types.ts  voice.ts
frontend/src/test/: setup.ts
(+15 files in other folders)
