[project]
name = "apex-backend"
version = "0.1.0"
description = "FastAPI backend for the APEX endurance coaching platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.5",
  "email-validator>=2.3.0",
  "fastapi>=0.116.1",
  "httpx>=0.28.1",
  "pydantic-settings>=2.11.0",
  "pwdlib[argon2]>=0.3.0",
  "pyjwt>=2.10.1",
  "psycopg[binary]>=3.2.9",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0.43",
  "uvicorn[standard]>=0.35.0",
]

[project.scripts]
app = "index:app"

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "pytest-cov>=7.0.0",
  "ruff>=0.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "C4", "SIM"]
ignore = ["B008", "E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.vercel.scripts]
build = "alembic upgrade head"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
